<resources>
    <string name="app_name">IITH Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Bus Schedule</string>
    <string name="menu_slideshow">Mess Menu</string>
    <string name="menu_tools">Timetable</string>
    <string name="menu_share">Cab Sharing</string>
    <string name="menu_send">Lost and Found</string>
    <string name="menu_logout">Logout</string>


    <string name="csr_from">From</string>
    <string name="csr_date">Date</string>
    <string name="csr_to">To</string>
    <string name="csr_check1">Don\'t show my booking to others</string>
    <string name="csr_check2">Recieve Notifications</string>
    <string name="csr_book">Book</string>
    <string name="csr_cancel">Cancel</string>
    <string name="csr_fromSelect">12:20</string>
    <string name="csr_toSelect">14:20</string>
    <string name="csr_dateSelect">22-05-2019</string>
    <string name="csm_register">Register</string>
    <string name="csm_cancel">Cancel</string>
    <string name="csm_snooze">Snooze</string>
    <string name="cs_date">Date</string>
    <string name="cs_CabDate">22/05/2019</string>
    <string name="cs_Heading2">Shares Available</string>
    <string name="cs_Heading1">Registered For</string>
    <string name="cs_CabTime2">14:00</string>

    <string name="cs_CabTime1">12:00</string>
    <string name="cs_time">Time</string>
    <string name="bs_show">GO</string>
    <string name="hint_one">Select Day</string>
    <string name="hint_two">Select bus type</string>
    <string name="bs_day">Day</string>
    <string name="bs_selectType">Bus Type</string>


    <string name="type_prompt">Choose Bus Type</string>

    <string-array name="busType">

        <item>Lingampally</item>
        <item>Sangareddy</item>
        <item>ODF</item>
        <item>Maingate</item>
    </string-array>
    <string-array name="TimetableView">
        <item>Day</item>
        <item>Week</item>

    </string-array>

    <string-array name="BusToggle">
        <item>Weekday</item>
        <item>Weekend</item>

    </string-array>
    <string-array name="BusToggleHome">
        <item>From IITH</item>
        <item>To IITH</item>

    </string-array>

    <string-array name="MessToggle">
        <item>LDH</item>
        <item>UDH</item>

    </string-array>

    <string-array name="Segments">
        <item>1-2</item>
        <item>3-4</item>
        <item>5-6</item>

    </string-array>

    <string-array name="slots">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string name="title_activity_cab_sharing_register2">CabSharing</string>
    <string name="title_activity_mess_menu_date">MessMenu</string>
    <string name="title_activity_cab_type">CabType</string>
    <string name="cab_type_rgia_to_iith">Cab : RGIA to IITH</string>
    <integer-array name="img_id_arr">
        <item>@drawable/img1</item>
        <item>@drawable/img2</item>

    </integer-array>
    <string name="title_activity_cab_sharing1">CabSharing1</string>
    <string name="iith">IITH</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="skip">Skip</string>

    <string-array name="day_list">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>

    </string-array>

    <string-array name="day_short">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>


    </string-array>
    <string-array name="CabToggle">

        <item>RGIA - IITH</item>
        <item>IITH - RGIA</item>


    </string-array>
    <string name="title_activity_skip_login">SkipLogin</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_course">AddCourse</string>
    <string name="title_activity_about">About</string>
    <string name="about">About</string>


</resources>
