<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bus_schedule"
            android:icon="@mipmap/baseline_directions_bus_black_18dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_mess_menu"
            android:icon="@mipmap/baseline_restaurant_menu_black_48"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@mipmap/baseline_directions_car_black_48"
            android:title="@string/menu_tools" />


        <item
            android:id="@+id/nav_cab_sharing"
            android:icon="@mipmap/baseline_directions_car_black_48"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_lost_found"
            android:icon="@mipmap/baseline_add_circle_black_48"
            android:title="@string/menu_send" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@mipmap/baseline_exit_to_app_black_48"
                android:title="@string/menu_logout" />
        </menu>
    </item>


</menu>
